09-AGIC-Rewrite-Rule-Set/kube-manifests/03-Ingress-rewrite-rule-set.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-ingress-service
  annotations:
    appgw.ingress.kubernetes.io/rewrite-rule-set: my-headers-rewrite-ruleset
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoserver-clusterip-service
                port: 
                  number: 80
